[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
script = ExtResource( 1 )

[node name="ConectionWindow" type="Panel" parent="."]
margin_left = 337.0
margin_top = 200.0
margin_right = 687.0
margin_bottom = 400.0
rect_min_size = Vector2( 350, 200 )

[node name="username_label" type="Label" parent="ConectionWindow"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.602
margin_top = 15.3579
margin_right = -61.6023
margin_bottom = 30.3579
text = "Username"

[node name="username_textbox" type="LineEdit" parent="ConectionWindow/username_label"]
margin_left = -5.0
margin_top = 14.0
margin_right = 123.0
margin_bottom = 38.0
text = "UnnamedPlayer"
max_length = 15
caret_blink = true
caret_blink_speed = 0.5

[node name="TabContainer" type="TabContainer" parent="ConectionWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
tab_align = 2

[node name="Host" type="Tabs" parent="ConectionWindow/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="create_section" type="Control" parent="ConectionWindow/TabContainer/Host"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.5
margin_top = -22.5
margin_right = 105.5
margin_bottom = 22.5

[node name="port_label" type="Label" parent="ConectionWindow/TabContainer/Host/create_section"]
margin_right = 40.0
margin_bottom = 14.0
text = "Port"

[node name="port_textbox" type="LineEdit" parent="ConectionWindow/TabContainer/Host/create_section/port_label"]
margin_left = -5.0
margin_top = 14.0
margin_right = 67.0
margin_bottom = 38.0
text = "27015"
caret_blink = true
caret_blink_speed = 0.5

[node name="players_label" type="Label" parent="ConectionWindow/TabContainer/Host/create_section"]
margin_left = 74.0
margin_right = 150.0
margin_bottom = 14.0
text = "Players"

[node name="players_textbox" type="LineEdit" parent="ConectionWindow/TabContainer/Host/create_section/players_label"]
margin_left = -5.0
margin_top = 14.0
margin_right = 59.0
margin_bottom = 38.0
text = "4"
max_length = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="host_button" type="Button" parent="ConectionWindow/TabContainer/Host/create_section"]
margin_left = 138.0
margin_top = 14.0
margin_right = 202.0
margin_bottom = 38.0
text = "Host"

[node name="Join" type="Tabs" parent="ConectionWindow/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="connect_section" type="Control" parent="ConectionWindow/TabContainer/Join"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -30.0
margin_right = 142.5
margin_bottom = 30.0

[node name="join_button" type="Button" parent="ConectionWindow/TabContainer/Join/connect_section"]
margin_left = 208.0
margin_top = 22.0
margin_right = 272.0
margin_bottom = 46.0
text = "Join"

[node name="ip_label" type="Label" parent="ConectionWindow/TabContainer/Join/connect_section"]
margin_left = 13.0
margin_top = 8.0
margin_right = 53.0
margin_bottom = 22.0
text = "IP "

[node name="ip_textbox" type="LineEdit" parent="ConectionWindow/TabContainer/Join/connect_section/ip_label"]
margin_left = -5.0
margin_top = 14.0
margin_right = 123.0
margin_bottom = 38.0
text = "127.0.0.1"
max_length = 15
caret_blink = true
caret_blink_speed = 0.5

[node name="port_label" type="Label" parent="ConectionWindow/TabContainer/Join/connect_section"]
margin_left = 143.0
margin_top = 8.0
margin_right = 183.0
margin_bottom = 22.0
text = "Port"

[node name="port_textbox" type="LineEdit" parent="ConectionWindow/TabContainer/Join/connect_section/port_label"]
margin_left = -5.0
margin_top = 14.0
margin_right = 59.0
margin_bottom = 38.0
text = "27015"
caret_blink = true
caret_blink_speed = 0.5
[connection signal="text_changed" from="ConectionWindow/username_label/username_textbox" to="." method="_on_username_textbox_text_changed"]
[connection signal="text_changed" from="ConectionWindow/TabContainer/Host/create_section/players_label/players_textbox" to="." method="_on_players_textbox_text_changed"]
[connection signal="pressed" from="ConectionWindow/TabContainer/Host/create_section/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="ConectionWindow/TabContainer/Join/connect_section/join_button" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="ConectionWindow/TabContainer/Join/connect_section/ip_label/ip_textbox" to="." method="_on_ip_textbox_text_changed"]
[connection signal="text_changed" from="ConectionWindow/TabContainer/Join/connect_section/port_label/port_textbox" to="." method="_on_port_textbox_text_changed"]
